--- a/practice-css/browser-intro(1).css
+++ b/practice-css/browser-intro(1).css
@@ -1,24 +1,45 @@
 p {
 	color: navy;
+	
+	
 }
 
 p.info {
-	font-size: 10pt;
+	font-size: small;
+	background-color:#dfdfdf
 }
 
 h1 {
-	background-color: #7f7fcf;
+	
+	color:white;
+	text-shadow: navy 1px 0 10px;
 }
-
+body {
+		background: linear-gradient(white,ffefaf);
+	  }
+	  
 h2 {
-	border: solid 1px black;
-	margin: 5px;
+	font-family:cursive;
+	color:#3f3faf
+	
+	
 }
 
 div#zentai {
 	display: flex;
-	flex-direction: row;
+	display: grid;                      
+    grid-template-columns: 1fr 1fr;
+	grid-auto-rows: 200px;        
+    grid-gap: 10px;
+	padding:5px;
 	width: 1024px;
+	img.sign {
+    float: right;   
+    width: 100px;
+    height: 100px;
+    margin: 10px 0 10px 10px;
+}
+
 }
 
 div#zentai > div {
