--- a/index.css
+++ b/index.css
@@ -1,8 +1,14 @@
+
 p{
-    background-color:blanchedalmond;
-    color:powderblue
+    
+    background: content-box radial-gradient(blue, skyblue);
+    
+    color:powderblue;
+    text-shadow: black 1px 0 10px;
 }
+
 h1{
+    
     color:aqua;
     text-shadow: navy 1px 0 10px;
 }
@@ -10,3 +16,8 @@ h2{
     color:aqua;
     text-shadow: navy 1px 0 10px;
 }
+h3{
+    color:aqua;
+    text-shadow: navy 1px 0 10px;
+}
+
