--- a/index.css
+++ b/index.css
@@ -1,23 +1,28 @@
-
 p{
     
-    background: content-box radial-gradient(blue, skyblue);
-    
-    color:powderblue;
-    text-shadow: black 1px 0 10px;
+    color:rgb(255, 255, 255);
+    text-shadow: black 1px 0 1px;
 }
 
 h1{
     
-    color:aqua;
-    text-shadow: navy 1px 0 10px;
+    color:rgb(30, 255, 0);
+    text-shadow: aquamarine 10px 0 10px;
 }
 h2{
-    color:aqua;
-    text-shadow: navy 1px 0 10px;
+    color:rgb(50, 255, 36);
+    text-shadow: rgb(233, 241, 22) 1px 0 10px;
 }
 h3{
-    color:aqua;
-    text-shadow: navy 1px 0 10px;
+    color:rgb(70, 249, 57);
+    text-shadow: rgb(255, 217, 0) 1px 0 10px;
 }
-
+a{
+    color:chartreuse;
+}
+html{
+    background-color: rgb(44, 224, 92);
+    body{
+        background-color: rgb(141, 111, 62);
+    }
+}
