--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ h3{
     text-shadow: rgb(0, 153, 255) 1px 0 10px;
 }
 a{
-    color:chartreuse;
+    color:rgba(0, 85, 255, 0.961);
 }
 html{
     background-image: linear-gradient(175deg, rgb(0 0 0 / 0%) 95%, #8da389 95%),
