--- a/project.css
+++ b/project.css
@@ -1,22 +1,30 @@
 p{
     
-    color:rgb(255, 255, 255);
-    text-shadow: black 1px 0 1px;
+    color:rgb(81, 174, 255);
+    text-shadow: rgb(38, 229, 210) 1px 0 1px;
 }
 
 h1{
     
-    color:rgb(30, 255, 0);
+    color:rgb(63, 84, 243);
     text-shadow: aquamarine 10px 0 10px;
 }
 html{
-    background-color: rgb(253, 253, 253);
-    body{
-        background-color: rgb(0, 0, 0);
-    }
+    background-color:  background-image linear-gradient(175deg, rgb(0 0 0 / 0%) 95%, #8da389 95%),
+    linear-gradient( 85deg, rgb(0 0 0 / 0%) 95%, #8da389 95%),
+    linear-gradient(175deg, rgb(0 0 0 / 0%) 90%, #b4b07f 90%),
+    linear-gradient( 85deg, rgb(0 0 0 / 0%) 92%, #b4b07f 92%),
+    linear-gradient(175deg, rgb(0 0 0 / 0%) 85%, #c5a68e 85%),
+    linear-gradient( 85deg, rgb(0 0 0 / 0%) 89%, #c5a68e 89%),
+    linear-gradient(175deg, rgb(0 0 0 / 0%) 80%, #ba9499 80%),
+    linear-gradient( 85deg, rgb(0 0 0 / 0%) 86%, #ba9499 86%),
+    linear-gradient(175deg, rgb(0 0 0 / 0%) 75%, #9f8fa4 75%),
+    linear-gradient( 85deg, rgb(0 0 0 / 0%) 83%, #9f8fa4 83%),
+    linear-gradient(175deg, rgb(0 0 0 / 0%) 70%, #74a6ae 70%),
+    linear-gradient( 85deg, rgb(0 0 0 / 0%) 80%, #74a6ae 80%);
 }
 ul{
-    color:rgb(30, 255, 0);
+    color:rgb(64, 146, 248);
     text-shadow: aquamarine 10px 0 10px;
 }
 input{
