--- a/project.css
+++ b/project.css
@@ -9,7 +9,7 @@ h1{
     color:rgb(63, 84, 243);
     text-shadow: aquamarine 10px 0 10px;
 }
-html{
+body{
     background-color:  background-image linear-gradient(175deg, rgb(0 0 0 / 0%) 95%, #8da389 95%),
     linear-gradient( 85deg, rgb(0 0 0 / 0%) 95%, #8da389 95%),
     linear-gradient(175deg, rgb(0 0 0 / 0%) 90%, #b4b07f 90%),
