--- a/index.css
+++ b/index.css
@@ -1,37 +1,52 @@
-p{
-    
-    color:rgb(111, 167, 245);
+p {
+
+    color: rgb(111, 167, 245);
     text-shadow: black 1px 0 1px;
 }
 
-h1{
-    
-    color:rgb(0, 0, 0);
+h1 {
+
+    color: rgb(0, 0, 0);
     text-shadow: rgb(82, 180, 255) 10px 0 10px;
 }
-h2{
-    
-    color:rgb(0, 0, 0);
+
+h2 {
+
+    color: rgb(0, 0, 0);
     text-shadow: rgb(83, 198, 244) 1px 0 10px;
 }
-h3{
-    
-    color:rgb(0, 0, 0);
+
+h3 {
+
+    color: rgb(0, 0, 0);
     text-shadow: rgb(0, 153, 255) 1px 0 10px;
 }
-a{
-    
-    color:rgba(0, 85, 255, 0.961);
+
+a {
+
+    color: rgba(0, 85, 255, 0.961);
 }
 
-body{
-    background: linear-gradient(125deg,#2c3e50,#27ae60,#2980b9,#e74c3c,#8e44ad);
-    background-size: auto;
-  background-size: 500%;
-  margin: 0;
-  padding: 0;
-  height: 140vh;
-  animation: beAnimation 15s linear infinite;
+body {
+
+    background: linear-gradient(125deg, #2c3e50, #27ae60, #2980b9, #e74c3c, #8e44ad);
+    background-size: 500%;
+    margin: 0;
+    padding: 0;
+    height: 140vh;
+    animation: beAnimation 15s linear infinite;
 }
 
+@keyframes beAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
 
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
