--- a/project.css
+++ b/project.css
@@ -33,8 +33,8 @@ body {
     }
 }
 ul{
-    color:rgb(0, 255, 157);
-    text-shadow: aquamarine 10px 0 10px;
+    color:rgb(244, 255, 93);
+    text-shadow: rgb(255, 120, 42) 10px 0 10px;
 }
 input{
     color:rgb(19, 31, 254);
