--- a/project.css
+++ b/project.css
@@ -32,7 +32,7 @@ body {
         background-position: 0% 50%;
     }
 }
-ul{
+h2{
     color:rgb(244, 255, 93);
     text-shadow: rgb(255, 120, 42) 10px 0 10px;
 }
