--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 p {
 
-    color: rgb(111, 167, 245);
-    text-shadow: black 1px 0 1px;
+    color: rgb(0, 0, 0);
+    text-shadow: rgb(0, 242, 255) 1px 0 1px;
 }
 
 h1 {
